--- a/styles.css
+++ b/styles.css
@@ -2272,6 +2272,13 @@ hr {
   border-radius: inherit;
 }
 
+.stats-help
+{
+  font-style: italic;
+  text-align: center;
+  font-size: small;
+}
+
 /* Responsive adjustments for track display */
 @media (max-width: 768px) {
   .track-counter {
